--- a/WeatherAPI/appsettings.json
+++ b/WeatherAPI/appsettings.json
@@ -5,5 +5,13 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "HealthChecksUI": {
+    "HealthChecks": [
+      {
+        "Name": "WeatherAPICheck",
+        "Uri": "https://localhost:7163/health"
+      }
+    ]
+  }
 }
